kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-np
  namespace: efk
spec:
  selector: 
    app: kibana
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 5601 
      # nodePort: 30000
